<resources>
    <string name="app_name">FinalProject</string>
    <string name="btnBeginFirstScreen_text">Luyện tập</string>
    <string name="easy_text">Easy</string>
    <string name="label_summaion_text">Cộng</string>
    <string name="label_subtraction_text">Trừ</string>
    <string name="label_multiplication_text">Nhân</string>
    <string name="label_division_text">Chia</string>
    <string name="label_multiplicationTable_text">Bảng cửu chương</string>
    <string name="btnSubmit_text0">Kết thúc</string>
    <string name="try_again_text">Làm lại</string>
    <string name="score_notification_text">Điểm của bé</string>
    <string name="btnTest_text">Kiểm tra</string>
    <string name="btnSubmit_text1">Tiếp theo</string>
    <string name="btnCompare_text">So sánh</string>
    <string name="btnPuzzle_text">Toán đố</string>
    <string name="text_view_name">Họ và tên:</string>
    <string name="text_view_display_name">Nguyễn Trần Trung</string>
    <string name="text_view_class">Lớp:</string>
    <string name="text_view_display_class">Android 3 - TechKids School</string>
    <string name="text_view_email">Email:</string>
    <string name="text_view_display_email">nguyentrantrung1986@gmail.com</string>
    <string name="text_view_mentor">Giảng viên:</string>
    <string name="text_view_display_mentor1">Bùi Xuân Cảnh</string>
    <string name="text_view_display_mentor2">Trần Đức Hùng</string>
    <string name="text_view_display_mentor3">Lê Tiến Dũng</string>
    <string name="text_view_display_mentor4">Vũ Nhật Linh</string>
    <string name="btnAuthor_text">Tác giả</string>
</resources>
